syntax = "proto3";
import "google/protobuf/any.proto";

package com.roje.bombak.common.proto;

//客户端发送到服务器的消息
message C2SMessage{
    int32 serial = 1;
    int64 timestamp = 2;
    string serviceType = 3;
    int32 messageId = 4;
    int32 secondMsgId = 5;
    google.protobuf.Any data = 6;
}

//服务器发送给客户端的消息
message S2CMessage{
    int32 messageId = 1;
    int64 timestamp = 3;
    int32 errorCode = 4;
    google.protobuf.Any data = 6;
}

//服务器转发客户端消息
message ForwardClientMessage {
    C2SMessage csMessage = 1;
    int64 uid = 2;
    string serverType = 3;
    string serverId = 4;
}
//服务器回复客户端消息
message ReplyClientMessage {
    S2CMessage scMessage = 1;
    int64 uid = 2;
    string serverType = 3;
    string serverId = 4;
}

//服务器广播消息
message ServerBroadcastMessage{
    int32 messageId = 1;
    int64 uid = 2;
    string serverType = 3;
    string serverId = 4;
    google.protobuf.Any data = 5;
}
